# rtsp2mjpg

./: Cargo.toml  Containerfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml  ci.yml  container.yml  release.yml
src/: main.rs  server.rs
src/mjpeg/: frame.rs  mod.rs  traits.rs  transcode.rs
