[package]
name = "rtsp2mjpg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.5"
axum = "0.6.18"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
