[package]
name = "rtsp2mjpg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-broadcast = "0.5.1"
async-net = "1.7.0"
async-process = "1.7.0"
async-trait = "0.1.68"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
pin-project = "1.1.2"
smol = "1.3.0"
thiserror = "1.0.40"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
tide-tracing = "0.0.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
